--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hello world, I'm Dawit Hailu!</h1>
-				<p>This is my website where I talk about <em>Physics</em>  and <>Data Science</>. <a href="/about">Read more about my life...</a></p>
+				<p>This is my website where I talk about <em>Physics</em>  and <em>Data Science</em>. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
