--- a/index.html
+++ b/index.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Dawit Hiluf Hailu</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hello world, I'm Dawit Hailu!</h1>
-				<p>This is my website where I talk about <em>Physics</em>  and <em>Data Science</em>. <a href="/about">I am a physicist aspiring to be Data Scientist.</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:daweet.hub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/Daweet">github.com/Daweet</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Daweet Hailu
+---
+<div class="blurb">
+	<h1>Hi there, I'm Dawit Hailu!</h1>
+	<p>I'm going to write about <em>physics</em> and <em>Data Science</em>. <a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
