--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Daweet Hailu
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Dawit Hailu!</h1>
-	<p>I'm going to write about <em>physics</em> and <em>Data Science</em>. <a href="/about">Read more about my life...</a></p>
+	<p>I'm going to write about <em>Physics</em> and <em>Data Science</em>. <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
