--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Daweet Hailu
+title: Dawitt Hailu
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Dawit Hailu!</h1>
-	<p>I'm going to write about <em>Physics</em> and <em>Data Science</em>. <a href="/about">Read more about my life...</a></p>
+	<h1>Hello world!, I'm Dawit Hailu!</h1>
+	<p>I'm going to share stuff about <em>Physics</em> and <em>Data Science</em> in this site. <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
