--- a/cv/index.html
+++ b/cv/index.html
@@ -6,5 +6,5 @@ cv: active
 projects: passive
 notes: passive
 contact: passive
-description: Current CV for Jonathan McGlone, a Librarian, Front-End Developer, Digital Publisher, Project Manager, Music Enthusiast, and Web Noodler living and working in Michigan.
+description: Current CV for Dawit Hailu, a physicist and aspiring data scientist.
 ---
