--- a/cv/index.html
+++ b/cv/index.html
@@ -8,3 +8,369 @@ notes: passive
 contact: passive
 description: Current CV for Dawit Hailu, a physicist and aspiring data scientist.
 ---
+# DAWIT HILUF HAILU
+
+```
+1830 Metzerott rd
+Adelphi, 20783, MD, USA
+https://github.com/Daweet
+https://www.linkedin.com/feed/
+Mobile: (+1)- 443 - 333 - 6981
+Email: dawit.hailu@mail.huji.ac.il or dawithlf54@gmail.com
+Skype : dav.luf
+```
+### PERSONAL INFORMATION
+
+```
+Place Of Birth : Ethiopia
+Sex: Male
+Marital Status : Married Nationality: Ethiopian
+```
+### EDUCATION
+
+```
+2016 PhD in Theory of Logic in Nano Devices Hebrew University of Jerusalem
+2005 MSc. In Physics (Quantum Optics) Addis Ababa University
+2000 BSc. In Physics Addis Ababa University
+```
+### TRAINING
+
+```
+2008 Computer Programming
+(Basics C,Linux ) Mekelle University
+2006 Higher Diploma Programme Abbiyi Addi C.T.E.
+2006 How to Write a Module Abbiyi Addi C.T.E.
+2006 Higher Diploma Moderation Mekelle C.T.E.
+2006 CPD Training Mekelle C.T.E.
+2006 HIV & AIDS Mainstreaming Voluntary Service Overseas
+2001 Computer Basics Sheba Com. Syst.
+2001 Distance Education Tutor Abbiyi Addi C.T.E.
+```
+### CERTIFICATES
+
+```
+2020 Immersive Data Bootcamp Montgomery College
+2018 What is Data Science IBM-Coursera
+2018 Open Source tools for Data Science IBM-Coursera.
+2018 Data Science Methodology IBM-Coursera.
+2018 Python for Data Science IBM-Coursera.
+2018 Data Analysis with Python IBM-Coursera.
+2018 Data Visualization with Python IBM-Coursera
+2018 Database and SQL for Data Science IBM-Coursera.
+2018 Machine Learning with Python IBM-Coursera.
+2018 Applied Data Science Capstone IBM-Coursera
+2018 Data Analytics Bootcamp Montgomery College
+```
+### ADDITIONAL INFORMATION
+
+Participant on European research team on Molecular Logic
+Participated in development of M.SC curriculum for Mekelle University
+Participated in the development of new curriculum for B.Sc in Physics for Ethiopian higher
+education institutions
+Module writing (General Physics I, Basic Science II, Teaching Natural science)
+Active participation in curriculum reviewing.
+Fluent at speaking, reading and writing Tigrigna, Amharic & English
+**Volunteer service in helping high school students on how to study and solve physics problems**
+
+
+### PROFESSIONAL EXPERIENCE
+
+**January 2019 – December 2019
+Mainly parental leave but used the opportunity to conduct the following two on going projects:**
+
+- Writing science/physics book for the general public in Amharic [One of Ethiopian
+    languages].
+- I am also writing a book that deals about Dynamics of Quantum systems using Lie algebra.
+
+**February 2018 – October 2018
+Post-doctoral fellow** at Sungkyunkwan University under the supervision of Dr. Joonsuk Huh South
+Korea.
+
+Conducting research on topics of Quantum information and Simulations, mentor masters and PhD
+students, present results on seminar and/or workshops, write manuscripts.
+
+**January 2016 – January 2018**
+
+**Post-doctoral fellow** at Ben-Gurion University of the Negev under the supervision of Dr. Yonatan
+Dubi in Israel.
+Conducting research on topics of Quantum coherence, quantum control, and quantum
+information; mentor masters and PhD students, present results on seminar and/or workshops, write
+manuscripts.
+
+**January 2007 – 2009/10 [Mekelle University, Department of Physics, Ethiopia]**
+
+Lecturer in physics, department of physics, Mekelle University
+
+- Team Leader of one of the teams (namely Quantum Team)
+    o In which I lead the team in preparing course syllabus for quantum courses,
+       wave and optics, nuclear physics and the likes
+    o Prepare and document examinations, worksheets, assignments and the likes
+- Delivery of higher courses such as Quantum Mechanics, Classical mechanics, statistical
+    mechanics and Electrodynamics
+- Advising senior students while they are doing their project
+- Conducting research
+- Conducting seminars for the University community
+
+**_Higher Diploma Leader (from January 2008 -- 2009 )_**
+
+- **Delivery of sessions** in the Higher Diploma Program - in which I train instructors of the
+    University about the Active Learning Methodologies, How to use Continuous Assessment, do
+    Action Research.
+- Training nearby high school teachers on how to do experiments
+- Moderating satellite universities and colleges on how they are running the program
+- **Delivering weekly training** sessions on evaluating lesson plans, reflective activities, how to
+conduct lesson observations & professional interviews
+- Delivering workshops on how to **moderate Portfolio’s** and individual pieces of work.
+- **Delivering workshops** to increase awareness of HIV & AIDS in **local cluster schools**.
+
+**_September 2006 up to December 2007
+Physics Instructor_** **at Abbiyi Addi College of Teachers Education.**
+
+- Delivery of course that were given to Diploma Students of the old curriculum for Physics,
+    Chemistry, Biology and Mathematics major students. (Wave & Optics, Earth Science,
+
+
+```
+Mechanics I & II, Electricity & Magnetism I & II, General Physics, Electronics, Modern Physics,
+Teaching Physics)
+```
+- **Delivery of courses** that are given to Diploma Students of Natural Science and M.B.C. of
+    the new curriculum.
+- Demonstrated ability to function effectively as a **team player** , as well as work
+    independently to achieve organizational objectives.
+- Talent for conveying ‘vision’ of a course, inspiring excitement and enthusiasm
+- Demonstrated **excellent planning, organizational, development and co-ordination** skills
+    acting as a **physics section coordinator** during the implementation of Curriculum 2006.
+- Implementing various student-centered learning methodologies, acting as **facilitator** to
+    promote student leadership in initiating and creating positive learning opportunities.
+- **Introducing new methods of assessment** (peer, group and self assessment) to our students
+    in 2006.
+- **Staff development** , identifying teachers’ needs and arranging trainings each week
+    accordingly.
+- Trained and experienced in formal **lesson observations**.
+- Consistently **excellent results**.
+- Regional and institutional coursework **moderation** and planning
+- Utilizing the Internet for resources on current events and literature to complement learning
+    activities.
+
+```
+Head Of Staff Development Unit
+```
+- Developing, organizing and **facilitating Continuous Professional Development opportunities**
+    for staff.
+- Assessment of current provision of staff training leading to the formulation and
+    **implementation of an extensive training programme.**
+- **Monitoring and assessing** the progress of the training.
+- **Conducting formal research** on the current staff induction practices, leading to
+    recommendations for the College.
+- Arranging trainings and workshops on a weekly basis.
+
+**_Higher Diploma Tutor_**
+
+- **Delivery of sessions** in the Higher Diploma Programme
+- Attending **weekly training** sessions on evaluating lesson plans, reflective activities, how to
+coqnduct lesson observations & professional interviews
+- Attending workshops on how to **moderate Portfolio’s** and individual pieces of work.
+- **Delivering workshops** to increase awareness of HIV & AIDS in **local cluster schools**.
+
+**_June 2002 –September 2003 Head of Continuing Extension Programme Abbiyi Addi College of
+teachers education.._**
+
+- Follow up of the overall program.
+- Programming or scheduling examination along with the invigilators
+- Assigning students to respective departments according to their choice.
+
+**_June 200 1 – September 200 2 Vice Head of Continuing Extension Programme Abbiyi Addi College of
+teachers education._**
+
+- Assist in follow up of the overall program
+- Assist in assigning students to respective departments according to their choice
+- Assist the registrar office in registering students for the evening program
+**_September 2001 – September 200 3 member of the research team and physics instructor of Abbiyi
+Addi College of teachers education._**
+- Conducting research in corporation with the North Carolina Central University
+
+
+- Evaluating the performance of in service students performance
+- Course offering for major and minor students of physics
+
+### RESEEARCH EXPERIENCE
+
+- Quantum studies: Analytical and Computational exploration of the dynamics of atomic and
+    molecular systems using the Lie algebra approach for use of Logic.
+- Thesis for partial fulfillment of the M.Sc. The title: - **A DEGENERATE THREE LEVEL LASER COUPLED
+TO A SQUEEZED VACUUM RESERVOIR**
+- Research for national conference: **THE EXISTING PRACTICE OF INDUCTION AT ABBIYI ADDI**
+    **COLLEGE OF TEACHERS EDUCATION**
+- Active participation in project formulation of MU-IUC, phase II on **ALTERNATIVE ENERGY**
+    **RESOURSES.**
+- Active participation on **ESTABLISHING GEO DATA BANK OF MU.**
+
+### COMPUTER SKILLS
+
+- Basik skills Tableau, python
+- IT Literate (Basics of Matlab, Computer Basics)
+- Linux, Mathematica, latex
+- Jupyter Notebook, Github
+
+**Scientific Workshops/Conferences**
+
+- Presented poster entitled “All Optical Programmable Logic Array” on **Applied**
+
+## Nanotechnology and Nanoscience International conference 2017, Rome, Italy.
+
+- Attended conference on **Quantum Effects in Biological Systems (QuEBS) 2017** in
+
+## Jerusalem, Israel.
+
+- Presented poster entitled “Three level system coupled to a phonon” on **Classical**
+
+## and Quantum Non-equilibrium Dynamics 2016, Tel-Aviv, Israel.
+
+# • Presented a talk in CMD26 - Condensed Matter in Groningen on “Use of coherence for
+
+```
+Logic” in Netherland (2016)
+```
+- Attended conference on **Molecular Logic** during review meeting of the European research
+    team MOLOC, March 2010, Dusseldorf, Germany
+- Presented a preliminary work on **use of Observables for Logic** , September 2012, Brussels,
+    Belgium
+- Attended review meeting in the European Commission Brussels, Belgium on January 2015, on
+    **unconventional computing, MULTI**
+
+### PUBLICATIONS
+
+- Fresch B., Yan TM., Hiluf D., Collini E., Levine R.D., Remacle F. (2018) Computing by
+
+## Non-linear Optical Molecular Response. In: Stepney S., Rasmussen S., Amos M. (eds)
+
+## Computational Matter. Natural Computing Series. Springer, Cham
+
+- Dawit Hiluf and Yonatan Dubi (2018) Phonon as environmental disturbance in three
+
+## level system (https://arxiv.org/abs/1803.08327)
+
+- Dawit Hiluf (2018), All optical programmable logic array (PLA), Journal of Physics:
+
+## Conference series, Volume 987, conference 1.
+
+
+- Dawit Hiluf, Fesseha Kassahun (2017), A degenerate three-level laser coupled to a
+
+## squeezed vacuum reservoir https://arxiv.org/abs/1709.
+
+- Fresch, B., Bocquel, J., Hiluf, D., Rogge, S., Levine, R. D. and Remacle, F. (2017),
+
+## Implementation of multivariable logic functions in parallel by electrical addressing a
+
+## molecule of three dopants in Silicon. ChemPhysChem. doi:10.1002/cphc.
+
+- Dawit Hiluf (201 7 ) Implementation of CNOT gate using Dynamics of two level system
+- Dawit Hiluf (2016) Link between Alhassid-Levine and Hioe-Eberly formalism of _SU(N)_
+
+## equations of motion arXiv eprints 1612.03278. https://arxiv.org/abs/1612.
+
+- Dawit Hiluf and Yonatan Dubi (2017) All Optical Flip-Flops and Shift Registers in Multi
+
+## level systems (https://arxiv.org/abs/1703.05656)
+
+- Dawit Hiluf (2016) Solution of two level system using 3rd order Magnus expansion,
+
+## arXiv eprints 1610.
+
+- Fresch B, Hiluf D, Collini E, Levine RD, Remacle F (2013) Molecular decision trees
+
+## realized by ultrafast electronic spectroscopy. Proc Natl Acad Sci USA 110 :171 83 –
+
+## 17188.
+
+- Dawit Hiluf. 2005. A DEGENERATE THREE LEVEL LASER COUPLED TO A SQUEEZED VACUUM
+    RESERVOIR. (M.Sc thesis)Addis Ababa University.
+- Dawit Hiluf. 2005. THE EXISTING PRACTICE OF INDUCTION AT ABBIYI ADDI COLLEGE OF
+    TEACHERS EDUCATION. Abbiyi Addi college of teachers education
+
+### SUMMARY
+
+```
+Strong background in solving physical problems, good quantum understanding, analytically
+with skill to compute numerically.
+```
+```
+Skilled educator with eight years experience seeking an opportunity to transfer existing
+communication, research, organizational and interpersonal skills to a position where they can
+be developed and utilized to their fullest extent.
+```
+### PROFESSIONAL PROFILE
+
+```
+Self-directed, enthusiastic educator with a passionate commitment to student and teacher
+development and the learning experience. Skilled in the design of challenging, enriching,
+and innovative activities that address the diverse interests and needs of students. Possessing
+outstanding communication skills; able to present information in a variety of ways,
+emphasizing the relevance of teaching material to the world beyond the classroom. Active
+team member who effectively collaborates with all levels of staff and establishes quality
+relationships with students.
+```
+```
+Experience in
+Higher Diploma Tutor Arranging training / Workshops
+Delivering staff training workshops Writing & revising modules
+Implementing Active Learning methods Designing staff development & CPD activities
+Implementing continuous assessment Lesson observation
+Practicum students facilitator Action Research
+Facilitating the Science News Club Continuing Distance & Extension Programme
+Continuous Professional Development English language Improvement Programme
+```
+### REFERENCES
+
+
+- Prof. Raphael D. Levine
+
+## Max Born Professor of Natural Philosophy
+
+## Email: rafi@fh.huji.ac.il
+
+## The Fritz Haber research Center for Molecular Dynamics,
+
+## The Hebrew University of Jerusalem,
+
+## Jerusalem 91904,
+
+## Israel
+
+- Assoc. Prof. Yonatan Dubi
+    Email: jdubi@bgu.ac.il
+Ilse-Katz Institute for Nanoscale Science and Technology,
+Ben-Gurion University of the Negev,
+Department of Physical Chemistry
+Beer-Sheva 84105,
+Israel
+- Dr. Barbara Fresch,
+
+## Department of Chemical Sciences,
+
+## Email: Barbara.fresch@unipd.it
+
+## Phone 049-827 5124
+
+## University of Padova
+
+## Via Marzolo, 1 35131 Padova
+
+## Italy
+
+- Dr. Thashika Pillay,
+## Assistant Professor
+## Faculty of Education, Queen's University
+## A319 Duncan McArthur Hall, 511 Union Street
+
+## Email: thashika.pillay@queens.ca
+
+## Phone 613-533 60000 ext. 79011
+
+## University of Padova
+
+## Via Marzolo, 1 35131 Padova
+
+## Italy
