--- a/cv/index.html
+++ b/cv/index.html
@@ -457,7 +457,7 @@ body {margin-top: 0px;margin-left: 0px;}
 
 <p class="p21 ft7">PROFESSIONAL EXPERIENCE January 2019 – December 2019</p>
 <p class="p22 ft7">Mainly parental leave but used the opportunity to conduct the following two on going projects:</p>
-<p class="p23 ft2"><span class="ft14">•</span><span class="ft15">Writing science/physics book for the general public in Amharic [One of Ethiopian languages].</span></p>
+<p class="p23 ft2"><span class="ft14">•</span><span class="ft15">Writing science/physics book for the general public.</span></p>
 <p class="p24 ft1"><span class="ft14">•</span><span class="ft16">I am also writing a book that deals about Dynamics of Quantum systems using Lie algebra.</span></p>
 <p class="p25 ft7">February 2018 – October 2018</p>
 <p class="p26 ft1"><nobr><span class="ft7">Post-doctoral</span></nobr><span class="ft7"> fellow </span>at Sungkyunkwan University under the supervision of Dr. Joonsuk Huh South Korea.</p>
