--- a/about/index.html
+++ b/about/index.html
@@ -4,11 +4,12 @@ title: About This Site
 description: Credits and information about the website Daweet.github.io, the personal website for Dawit Hailu, a physicist, 
 aspiring data scientist.
 ---
-<span style='font-family:font_family name'> message  </span>
-Examples:
-## <span style='font-family:Georgia'> About Me.
-  
-My name is Dawit Hiluf Hailu, I am a Molecular Physicist by profession, recently I am learning new field aliong with Python coding. 
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1 style="font-family:verdana;">About Me</h1>
+<p style="font-family:courier;">My name is Dawit Hiluf Hailu, I am a Molecular Physicist by profession, recently I am learning new field aliong with Python coding. 
 This new field I am  learning is Data Science, I am fascinitated by it, as I can use the newly acquired tool to play with data 
 and make sense of the what numbers tells us about different issues.
 
@@ -17,4 +18,9 @@ we need extra help which we invent. To look further distances we have to create 
 microscope. To help us make logical formulations we need to invent mathematics. 
 
 Mathematics, in Data's case, numbers are the input we use to explore different issues about our environment and ourselves. 
-In this page I try to talk about physics and data. 
+In this page I try to talk about physics and data.</p>
+
+</body>
+</html>
+  
+
