--- a/about/index.html
+++ b/about/index.html
@@ -8,16 +8,17 @@ aspiring data scientist.
 <html>
 <body>
 
-<h1 style="font-family:verdana;">About Me</h1>
-<p style="font-family:courier;">My name is Dawit Hiluf Hailu, I am a Molecular Physicist by profession, recently I am learning new field aliong with Python coding. 
+<h1 style="font-family:arial;">About Me</h1>
+<p style="font-family:sans-serif";"> My name is Dawit Hiluf Hailu, I am a Molecular Physicist by profession, recently I am learning new field aliong with Python coding. 
 This new field I am  learning is Data Science, I am fascinitated by it, as I can use the newly acquired tool to play with data 
-and make sense of the what numbers tells us about different issues.
+and make sense of the what numbers tells us about different issues.</p>
 
-We realize through science that our senses are deceiving us, and for us to make accurate understanding of the world around us, 
+<p style="font-family:sans-serif";"> We realize through science that our senses are deceiving us, and for us to make accurate understanding of the world around us, 
 we need extra help which we invent. To look further distances we have to create telescope, to invedtigate the small thing we need 
-microscope. To help us make logical formulations we need to invent mathematics. 
+microscope. To help us make logical formulations we needed to invent mathematics. Through which we nolt only now make sesnse of the unikverse and
+but also are able to communicate with it globaly.</p>
 
-Mathematics, in Data's case, numbers are the input we use to explore different issues about our environment and ourselves. 
+<p style="font-family:sans-serif";"> Mathematics, in Data's case numbers, are the input we use to explore different issues about our environment and ourselves. 
 In this page I try to talk about physics and data.</p>
 
 </body>
