--- a/about/index.html
+++ b/about/index.html
@@ -18,8 +18,8 @@ we need extra help which we invent. To look further distances we have to create 
 microscope. To help us make logical formulations we needed to invent mathematics. Through which we nolt only now make sesnse of the unikverse and
 but also are able to communicate with it globaly.</p>
 
-<p style="font-family:sans-serif";"> Mathematics, in Data's case numbers, are the input we use to explore different issues about our environment and ourselves. 
-In this page I try to talk about physics and data.</p>
+<p style="font-family:sans-serif";"> Mathematics, in Data's case numbers, are the input we use to explore different issues about 
+our environment and ourselves. In this web page I will try to talk about physics and data.</p>
 
 </body>
 </html>
