--- a/about/index.html
+++ b/about/index.html
@@ -4,22 +4,29 @@ title: About This Site
 description: Credits and information about the website Daweet.github.io, the personal website for Dawit Hailu, a physicist, 
 aspiring data scientist.
 ---
+
 <!DOCTYPE html>
 <html>
 <body>
 
 <h1 style="font-family:arial;">About Me</h1>
-<p style="font-family:sans-serif";"> My name is Dawit Hiluf Hailu, I am a Molecular Physicist by profession, recently I am learning new field aliong with Python coding. 
-This new field I am  learning is Data Science, I am fascinitated by it, as I can use the newly acquired tool to play with data 
-and make sense of the what numbers tells us about different issues.</p>
+<p style="font-family:sans-serif";"> My name is Dawit Hiluf Hailu, I am a Molecular Physicist by profession, and recently 
+ I am interested in data science, consequently I am learning this new field along with Python coding. I am fascinitated by it, 
+ as I can use the newly acquired tool to play with data and make sense of the what numbers tells us about different issues.</p>
 
-<p style="font-family:sans-serif";"> We realize through science that our senses are deceiving us, and for us to make accurate understanding of the world around us, 
-we need extra help which we invent. To look further distances we have to create telescope, to invedtigate the small thing we need 
-microscope. To help us make logical formulations we needed to invent mathematics. Through which we nolt only now make sesnse of the unikverse and
-but also are able to communicate with it globaly.</p>
+<p style="font-family:sans-serif";"> We realize through science that our senses are deceiving us, and if we want to make accurate
+description and understanding of the world and the universe, we need extra help which we invented. To look from afar we have to
+needed to create telescope, to investigate the very small and tiny world we had to get help from the likes of microscope.
+Furthermore, to help us make logical formulations we needed to invent mathematics. Through which, by the way, we not only 
+make sesnse of our universe but also are able to communicate with it globaly.</p>
 
-<p style="font-family:sans-serif";"> Mathematics, in Data's case numbers, are the input we use to explore different issues about 
-our environment and ourselves. In this web page I will try to talk about physics and data.</p>
+<p style="font-family:sans-serif";"> Mathematics, in Data's case numbers, are the input we use to explore different issues 
+pertaining to our environment and ourselves. This ranges from using data to investigate crime, identfiy and lur cutomers to 
+buy our product/s, learn about weather, study physical and bioligical data etc. </p>
+                                   
+ <p style="font-family:sans-serif";"> Of course data need not only be full of numbers, we must point out that we have textual, 
+ and audio (and/or video) data too that need some form of analysis. It is my aim in this web pages to write both about Physics and data science, share 
+ my journey along the way.</p>
 
 </body>
 </html>
