--- a/about/index.html
+++ b/about/index.html
@@ -25,8 +25,8 @@ pertaining to our environment and ourselves. This ranges from using data to inve
 buy our product/s, learn about weather, study physical and bioligical data etc. </p>
                                    
  <p style="font-family:sans-serif";"> Of course data need not only be full of numbers, we must point out that we have textual, 
- and audio (and/or video) data too that need some form of analysis. It is my aim in this web pages to write both about Physics and data science, share 
- my journey along the way.</p>
+ and audio (and/or video) data too that need some form of analysis. It is my aim in this web pages to write both about Physics and
+ data science, share my journey along the way.</p>
 
 </body>
 </html>
