--- a/index.html
+++ b/index.html
@@ -1,8 +1,22 @@
 ---
 layout: default
-title: Dawit Hailu
+title: https://github.com/Daweet/Daweet.github.io
+cv: passive
+notes: passive
+contact: passive
+description: Dawit Hiluf Hailu.
 ---
-<div class="blurb">
-	<h1>Hello world!, I'm Dawit Hailu!</h1>
-	<p>I'm going to share stuff about <em>Physics</em> and <em>Data Science</em> in this site. <a href="/about">Read more about my life...</a></p>
-</div><!-- /.blurb -->
+<!-- <div class="jumbotron"> -->
+<div class="row marketing">
+	<div class="col-sm-4">
+	<img  class="img-circle avatar" alt="Dawit Hailu" src="img/MePhoto.png">
+	</div>
+	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
+	<p class="lead">Hi, I'm <span itemprop="name">Dawit Hailu</span> a physicist and aspiring data scientist.</p>
+	<p>I am a <span itemprop="title">physicist</span>, <span itemprop="title">aspiring data scientist</span>, living in <span itemprop="address" itemscope
+    itemtype="http://data-vocabulary.org/Address"> <span itemprop="locality">Adelphi</span>, <span itemprop="region">Maryland</span></p>
+	
+	<p>I'm available for hire as a <span itemprop="title">physics tutor, science content writer, or consultant</span>. <a href="contact">Drop me a line</a> about your project if you're interested in working with me.</p>
+	</div>
+</div>
+<!-- </div> -->
