--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ description: Dawit Hiluf Hailu.
 <!-- <div class="jumbotron"> -->
 <div class="row marketing">
 	<div class="col-sm-4">
-	<img  class="img-circle avatar" alt="Dawit Hailu" src="img/MePhoto.png">
+	<img  class="img-circle avatar" alt="Dawit Hailu" src="img/MePhoto.png height="42" width="42"">
 	</div>
 	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
 	<p class="lead">Hi, I'm <span itemprop="name">Dawit Hailu</span> a physicist and aspiring data scientist.</p>
