--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@ description: Dawit Hiluf Hailu.
 <!-- <div class="jumbotron"> -->
 <div class="row marketing">
 	<div class="col-sm-4">
-	<img  class="img-circle avatar" alt="Dawit Hailu" src="img/MePhoto.png height="42" width="42"">
+	<img  class="img-circle avatar" alt="Dawit Hailu" src="img/MePhoto.png height="4.2" width="4.2"">
 	</div>
 	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
 	<p class="lead">Hi, I'm <span itemprop="name">Dawit Hailu</span> a physicist and aspiring data scientist.</p>
 	<p>I am a <span itemprop="title">physicist</span>, <span itemprop="title">aspiring data scientist</span>, living in <span itemprop="address" itemscope
     itemtype="http://data-vocabulary.org/Address"> <span itemprop="locality">Adelphi</span>, <span itemprop="region">Maryland</span></p>
 	
-	<p>I'm available for hire as a <span itemprop="title">physics tutor, science content writer, or consultant</span>. <a href="contact">Drop me a line</a> about your project if you're interested in working with me.</p>
+	<p>I'm going to share you my posts about data science and physics.</p>
 	</div>
 </div>
 <!-- </div> -->
