--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@ description: Dawit Hiluf Hailu.
 <!-- <div class="jumbotron"> -->
 <div class="row marketing">
 	<div class="col-sm-4">
-	<img  class="img-circle avatar" alt="Dawit Hailu" src="img/MePhoto.png" width="500" height="600">
+	<img  class="img-circle avatar" alt="Dawit Hailu" src="img/MePhoto.png" width="400" height="400">
 	</div>
 	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
-	<p class="lead" style="font-family:verdana;">Hi, I'm <span itemprop="name">Dawit Hailu</span> a physicist and aspiring data scientist.</p>
-	<p>I am a <span itemprop="title">physicist</span>, <span itemprop="title">aspiring data scientist</span>, living in <span itemprop="address" itemscope
+	<p class="lead" style="font-family:verdana;">Hi, I'm <span itemprop="name">Dawit Hailu</span></p>
+	<p style="font-family:verdana;">I am a <span itemprop="title">physicist</span>, <span itemprop="title">aspiring data scientist</span>, living in <span itemprop="address" itemscope
     itemtype="http://data-vocabulary.org/Address"> <span itemprop="locality">Adelphi</span>, <span itemprop="region">Maryland</span></p>
 	
 	<p style="font-family:verdana;">I'm going to share you my posts about data science and physics.  <a href="contact">Drop me a line</a> for your feedback.</p>
