--- a/about/index.html
+++ b/about/index.html
@@ -12,20 +12,20 @@ aspiring data scientist.
 <h1 style="font-family:arial;">About Me</h1>
 <p style="font-family:sans-serif";"> My name is Dawit Hiluf Hailu, I am a Molecular Physicist by profession, and recently 
  I am interested in data science, consequently I am learning this new field along with Python coding. I am fascinitated by it, 
- as I can use the newly acquired tool to play with data and make sense of the what numbers tells us about different issues.</p>
+ as I can use the newly acquired tool to play with data and make sense of what numbers tells us about different issues.</p>
 
 <p style="font-family:sans-serif";"> We realize through science that our senses are deceiving us, and if we want to make accurate
 description and understanding of the world in particular and the universe in general, it turns out we need extra help which we 
 invented. To look from afar, for instance, we needed to create telescope, to investigate the very small and tiny world we had to
-get help from the equipments like that of microscope. Furthermore, to help us make logical formulations we needed to invent mathematics. 
-Through which, by the way, we not only make sesnse of our universe but also are able to communicate with it globaly.</p>
+get help from equipments such as microscope. On top of this, to help us make logical formulations we needed to invent mathematics. 
+Through which, by the way, we not only make sense of our universe but also are able to communicate with globaly.</p>
 
 <p style="font-family:sans-serif";"> Mathematics, in Data's case numbers, are the input we use to explore different issues 
 pertaining to our environment and ourselves. This ranges from using data to investigate crime, identfiy and lure customers to 
 buy our product/s, learn about weather, study physical and bioligical data etc. </p>
                                    
  <p style="font-family:sans-serif";"> Of course, it goes without saying that, data need not only be full of numbers, we must 
- point out that we have textual, and audio (and/or video) data too that need some form of analysis. It is my aim in this web 
- page to write both about Physics and data science, share my journey along the way.</p>
+ point out that we have data in a text form, audio, and/or video data too. Such kind of data need some form of analysis. It is
+ my intention in this web page to write about such issues, both about Physics and data science, and share my journey along the way.</p>
 </body>
 </html>
