--- a/index.html
+++ b/index.html
@@ -12,11 +12,26 @@ description: Dawit Hiluf Hailu.
 	<img  class="img-circle avatar" alt="Dawit Hiluf Hailu" src="img/MePhoto.png" width="200" height="200">
 	</div>
 	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
-	<p class="lead" style="font-family:verdana;">Hi, I'm <span itemprop="name">Dawit Hailu</span></p>
+	<p class="lead" style="font-family:verdana;">Hello there, I'm <span itemprop="name">Dawit Hiluf Hailu</span></p>
 	<p style="font-family:verdana;">I am a <span itemprop="title">physicist</span>, <span itemprop="title">aspiring data scientist</span>, living in <span itemprop="address" itemscope
     itemtype="http://data-vocabulary.org/Address"> <span itemprop="locality">Adelphi</span>, <span itemprop="region">Maryland</span></p>
-	
-	<p style="font-family:verdana;">I'm going to share you my views about data science and physics. You can <a href="contact">drop me a line</a> for your feedback.</p>
+	<p style="font-family:verdana;">In undergraduate I studied physics, as I was fascinitated by it --specially by quantum--I decided to 
+	pursue my masters degree in <span itemprop="title">quantum physics</span> during which I investigated the statistical properties associated with
+	three-level laser driven by coherent light and coupled to a squeezed vacuum reservoir<a href="https://arxiv.org/abs/1709.10047"> check this</a>. 
+	Squeezed coherent states are very interesting feature <a href="https://en.wikipedia.org/wiki/Squeezed_coherent_state">squeezed-light</a>.
+	Loosely speaking we say a quantum state is squeezed, in its quadrature for instance, if any of its quadratures has a standard deviation that falls below
+	value of 1/2. This means that in order to fullfill Heisneberg's uncertainity, the uncertainty in one quadrature maybe squeezed below 1, 
+	by stretching the uncertainty in the other quadrature.</p>
+	<p style="font-family:verdana;"> During my PhD, I studied theory of logic in nano-devices in which I explored and showed the possibilty
+	of using atoms and/or molecules performing complicated computations. Our group showed how dynamics of an atomic system, which upon perturbation
+	by by external field, is able to mimic logic computations, Boolean and Non-Boolean. The physical system can be solid or solution, and the 
+	perturbation can be optical or electrical. In both cases the dynamics can be explored using Lie-algebraic approach in which the 
+	physical parameters are embeded as generators.  I promise to blog about this topics in future, but for the time being anybody 
+	who is interested can check the publications <a href="https://www.pnas.org/content/110/43/17183">molecular-tree</a> 
+	and <a href="https://chemistry-europe.onlinelibrary.wiley.com/doi/full/10.1002/cphc.201700222">electrical-tree</a> 
+	</p>
+	<p style="font-family:verdana;">I'm going to share you my views about data science and physics. I invite you to share my journey. 
+	You can <a href="contact">drop me a line</a> for your feedback.</p>
 	</div>
 </div>
 <!-- </div> -->
