--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@ contact: passive
 description: Dawit Hiluf Hailu.
 ---
 <!-- <div class="jumbotron"> -->
-<div class="row marketing">
-	<div class="col-sm-4">
+<div class="row marketing" align="justify">
+	<div class="col-sm-4" align="justify">
 	<img  class="img-circle avatar" alt="Dawit Hiluf Hailu" src="img/MePhoto.png" width="200" height="200">
 	</div>
-	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
+	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8" align="justify">
 	<p class="lead" style="font-family:verdana;">Hello there, I'm <span itemprop="name">Dawit Hiluf Hailu</span></p>
 	<p style="font-family:verdana;">I am a <span itemprop="title">physicist</span>, <span itemprop="title">aspiring data scientist</span>, living in <span itemprop="address" itemscope
     itemtype="http://data-vocabulary.org/Address"> <span itemprop="locality">Adelphi</span>, <span itemprop="region">Maryland</span></p>
