--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 ---
-layout: default
-title: https://github.com/Daweet/Daweet.github.io
+layout: post
+mathjax: true
+comments: true
+title:  https://github.com/Daweet/Daweet.github.io
 cv: passive
 notes: passive
 contact: passive
