--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 ---
-layout: post
-mathjax: true
-comments: true
+layout: default
 title:  https://github.com/Daweet/Daweet.github.io
 cv: passive
 notes: passive
