--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ description: Dawit Hiluf Hailu.
 	<p class="lead" style="font-family:verdana;">Hello there, I'm <span itemprop="name">Dawit Hiluf Hailu</span></p>
 	<p style="font-family:verdana;">I am a <span itemprop="title">physicist</span>, <span itemprop="title">aspiring data scientist</span>, living in <span itemprop="address" itemscope
     itemtype="http://data-vocabulary.org/Address"> <span itemprop="locality">Adelphi</span>, <span itemprop="region">Maryland</span></p>
-	<p style="font-family:verdana;">In undergraduate I studied physics, as I was fascinitated by it --specially by quantum--I decided to 
+	<p style="font-family:verdana;">In my undergraduate I studied physics, as I was fascinitated by it --specially by quantum--I decided to 
 	pursue my masters degree in <span itemprop="title">quantum physics</span> during which I investigated the statistical properties associated with
 	three-level laser driven by coherent light and coupled to a squeezed vacuum reservoir<a href="https://arxiv.org/abs/1709.10047"> check this</a>. 
 	Squeezed coherent states are very interesting feature <a href="https://en.wikipedia.org/wiki/Squeezed_coherent_state">squeezed-light</a>.
@@ -24,7 +24,7 @@ description: Dawit Hiluf Hailu.
 	by stretching the uncertainty in the other quadrature.</p>
 	<p style="font-family:verdana;"> During my PhD, I studied theory of logic in nano-devices in which I explored and showed the possibilty
 	of using atoms and/or molecules performing complicated computations. Our group showed how dynamics of an atomic system, which upon perturbation
-	by by external field, is able to mimic logic computations, Boolean and Non-Boolean. The physical system can be solid or solution, and the 
+	by external field, is able to mimic logic computations, Boolean and Non-Boolean. The physical system can be solid or solution, and the 
 	perturbation can be optical or electrical. In both cases the dynamics can be explored using Lie-algebraic approach in which the 
 	physical parameters are embeded as generators.  I promise to blog about this topics in future, but for the time being anybody 
 	who is interested can check the publications <a href="https://www.pnas.org/content/110/43/17183">molecular-tree</a> 
