--- a/about/index.html
+++ b/about/index.html
@@ -90,26 +90,28 @@ html {
 </div>
 
 <h2 style="text-align:center">Who am I?</h2>
- 
- <p style="font-family:sans-serif";"> My name is Dawit Hiluf Hailu, I am a Molecular Physicist by profession, and recently 
+ <div align="justify"> 
+ <p style="font-family:verdana"> My name is Dawit Hiluf Hailu, I am a Molecular Physicist by profession, and recently 
  I am interested in data science, consequently I am learning this new field along with Python coding. I am fascintated by it, 
  as I can use the newly acquired tool to play with data and make sense of what numbers tells us about different issues.</p>
 
-<p style="font-family:sans-serif";"> We realize through science that our senses are deceiving us, and if we want to make accurate
+<p style="font-family:verdana"> I am passionate about science. I am alsways amazed by how science help us navigate through the jungle of
+   unknowns to arrive at solid conclusion.</p>
+<p style="font-family:verdana"> We realize through science that our senses are deceiving us, and if we want to make accurate
 description and understanding of the world in particular and the universe in general, it turns out we need extra help which we 
 invented. To look from afar, for instance, we needed to create telescope, to investigate the very small and tiny world we had to
 get help from equipments such as microscope. On top of this, to help us make logical formulations we needed to invent mathematics. 
 Through which, by the way, we not only make sense of our universe but also are able to communicate with globally.</p>
 
-<p style="font-family:sans-serif";"> Mathematics, in Data's case numbers, are the input we use to explore different issues 
+<p style="font-family:verdana"> Mathematics, in Data's case numbers, are the input we use to explore different issues 
 pertaining to our environment and ourselves. This ranges from using data to investigate crime, identfiy and lure customers to 
 buy our product/s, learn about weather, study physical and biological data etc. </p>
                                    
- <p style="font-family:sans-serif";"> Of course, it goes without saying that, data need not only be full of numbers, we must 
+ <p style="font-family:verdana"> Of course, it goes without saying that, data need not only be full of numbers, we must 
  point out that we have data in a text form, audio, and/or video data too. Such kind of data need some form of analysis. It is
  my intention in this web page to write about such issues, both about Physics and data science, and share my journey along the way.</p>
 
-
+ </div>
 </body>
 </html>
 
