--- a/about/index.html
+++ b/about/index.html
@@ -95,8 +95,15 @@ html {
  I am interested in data science, consequently I am learning this new field along with Python coding. I am fascintated by it, 
  as I can use the newly acquired tool to play with data and make sense of what numbers tells us about different issues.</p>
 
-<p style="font-family:verdana"> I am passionate about science. I am alsways amazed by how science help us navigate through the jungle of
-   unknowns to arrive at solid conclusion.</p>
+<p style="font-family:verdana"> I am passionate about science. I am also amazed by how science help us navigate through the jungle of
+ unknowns to arrive at solution. Granted science is dynamic in that what is accepeted now could probably be shown to be not the case or needs 
+ modifications. Despite this fact science has established a mechanicsm to self check, and has no qualm about abondoning held knowldeg to new
+   one with evidence. This aspect of science is inspiring, we need to be dynamics and ready to accept the new reality with evidence.</p>
+   
+   <p style="font-family:verdana">  Science has provided us with medicine therby giving us a tool to fight disease, advanced technology
+     thereby create astonishing stuff that end making life fun and easy, and knowldge that allow us make rational descions along with 
+     informed choices. Sceince Has also freed us from unnecessary fears by simply providing explanation.</p>
+   
 <p style="font-family:verdana"> We realize through science that our senses are deceiving us, and if we want to make accurate
 description and understanding of the world in particular and the universe in general, it turns out we need extra help which we 
 invented. To look from afar, for instance, we needed to create telescope, to investigate the very small and tiny world we had to
