--- a/about/index.html
+++ b/about/index.html
@@ -98,18 +98,23 @@ html {
 <p style="font-family:verdana"> I am passionate about science. I am also amazed by how science help us navigate through the jungle of
  unknowns to arrive at solution. Granted science is dynamic in that what is accepeted now could probably be shown to be not the case or needs 
  modifications. Despite this fact science has established a mechanicsm to self check, and has no qualm about abondoning held knowldeg to new
-   one with evidence. This aspect of science is inspiring, we need to be dynamics and ready to accept the new reality with evidence.</p>
+   one with evidence. This aspect of science is inspiring, we need to be dynamics and ready to accept the new reality when faced with evidence.</p>
    
-   <p style="font-family:verdana">  Science has provided us with medicine therby giving us a tool to fight disease, advanced technology
-     thereby create astonishing stuff that end making life fun and easy, and knowldge that allow us make rational descions along with 
+   <p style="font-family:verdana">  Science has provided us with medicine thereby giving us a tool to fight disease, advanced technology
+     thus create astonishing stuff that end up making life fun and easy, and knowldge that allow us make rational descions along with 
      informed choices. Sceince Has also freed us from unnecessary fears by simply providing explanation.</p>
    
-<p style="font-family:verdana"> We realize through science that our senses are deceiving us, and if we want to make accurate
+<p style="font-family:verdana"> We realize, through science, that our senses are deceiving us, and if we want to make accurate
 description and understanding of the world in particular and the universe in general, it turns out we need extra help which we 
 invented. To look from afar, for instance, we needed to create telescope, to investigate the very small and tiny world we had to
 get help from equipments such as microscope. On top of this, to help us make logical formulations we needed to invent mathematics. 
 Through which, by the way, we not only make sense of our universe but also are able to communicate with globally.</p>
 
+   <p style="font-family:verdana">Physics can be loosely categorized into two branches, one studies the very big like planets, solar systems, galaxies
+     and the universe; the other focuses on the very small scale of atoms, molecules, electrons. Although both, extraordinarily, explain nature very well.
+   The theories and equations, as of yet, does not fully communicate with each other. We can't use one to explain the other's realm. Perhaps
+   one day we might have a unified theory of everything, but for now we need to switch between quantum and astrophysics to answer questions
+   pertaining to our universe. </p>
 <p style="font-family:verdana"> Mathematics, in Data's case numbers, are the input we use to explore different issues 
 pertaining to our environment and ourselves. This ranges from using data to investigate crime, identfiy and lure customers to 
 buy our product/s, learn about weather, study physical and biological data etc. </p>
