--- a/about/index.html
+++ b/about/index.html
@@ -80,7 +80,7 @@ html {
 }
 </style>
 </head>
-<body style="margin:0;padding:0">
+<body style='margin-top:0;margin-left:0;margin-right:0;'>
 
 <div class="about-section">
   <h1>About Me</h1>
