--- a/about/index.html
+++ b/about/index.html
@@ -79,6 +79,12 @@ html {
   }
 }
 </style>
+  <style>
+div {
+  margin: 70px;
+  border: 1px solid #4CAF50;
+}
+</style>
 </head>
 <body style='margin-top:0;margin-left:0;margin-right:0;'>
 
