--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ description: Dawit Hiluf Hailu.
 	<img  class="img-circle avatar" alt="Dawit Hiluf Hailu" src="img/MePhoto.png" width="200" height="200">
 	</div>
 	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8" align="justify">
+		<h1 style="font-family:verdana;"> Dawit Hiluf Hailu (PhD)</h1>
 	<p class="lead" style="font-family:verdana;">Hello there, I'm <span itemprop="name">Dawit Hiluf Hailu</span></p>
 	<p style="font-family:verdana;">I am a <span itemprop="title">physicist</span>, <span itemprop="title">aspiring data scientist</span>, living in <span itemprop="address" itemscope
     itemtype="http://data-vocabulary.org/Address"> <span itemprop="locality">Adelphi</span>, <span itemprop="region">Maryland</span></p>
