--- a/contact/index.html
+++ b/contact/index.html
@@ -14,7 +14,7 @@ description: Contact information for Dawit Hailu.
 	<ul class="list-unstyled">
 	<li><a href="https://www.linkedin.com/in/dawit-h-hailu-ph-d-4b7b8787/">@LinkedIn</a></li>
 	<li><a href="http://github.com/Daweet">@GitHub</a></li>
-	<li><a href="http://https://twitter.com/Dawit_Hiluf">@Twitter</a></li>
+	<li><a href="https://twitter.com/home">@Twitter</a></li>
 	<li>Or by sending an e-mail to <span class="obfuscate">daweet.hailu@gmail.com</span></li>
 	</ul>
 
