--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ description: Dawit Hiluf Hailu.
 		<h1 style="color:indianred" style="font-family:verdana;"> Dawit Hiluf Hailu (PhD)</h1>
 	<p class="lead" style="font-family:verdana;">Hello there, welcome to my page!</p>
 	<p style="font-family:verdana;">I am a <span itemprop="title">physicist</span>, <span itemprop="title">aspiring data scientist</span>, living in <span itemprop="address" itemscope
-    itemtype="http://data-vocabulary.org/Address"> <span itemprop="locality">Adelphi</span>, <span itemprop="region">Maryland.</span>  <a href="https://sway.office.com/AERTjJF4TEAvNZg5?ref=Link">Check my CV in sway<a/></p>
+    itemtype="http://data-vocabulary.org/Address"> <span itemprop="locality">Adelphi</span>, <span itemprop="region">Maryland.</span>  <a href="https://sway.office.com/AERTjJF4TEAvNZg5?ref=Link">Check my CV in sway</a></p>
 	<p style="font-family:verdana;">In my undergraduate I studied physics, as I was fascinitated by it --specially by quantum--I decided to 
 	pursue my masters degree in <span itemprop="title">quantum physics</span> during which I investigated the statistical properties associated with
 	three-level laser driven by coherent light and coupled to a squeezed vacuum reservoir<a href="https://arxiv.org/abs/1709.10047"> check this</a>. 
